--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap');
 
+
 .clearfix:after{
    content:'';
    display:table;
@@ -74,15 +75,18 @@ li{
    margin: 55px;
    position: absolute;
    z-index: 2;
+   display: flex;
+    justify-content: center;
+    align-items: center;
  }
 
 #logo h1{
    position: absolute;
-   color:#fff;
+   color: #fff;
    font-size: 31px;
    text-align: center;
    letter-spacing: 2px;
-   margin: 41px 41px;
+   padding: 10px 0 0 13px;
    width: 100px;
    line-height: 45px;
  }
@@ -190,6 +194,15 @@ li{
 
 #info #logo{
    margin: 0px;
+   width: 30%;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+}
+
+#info #logo img{
+   width: 150px;
 }
 
 #contact{
@@ -375,7 +388,7 @@ li{
 
 #roomPicture .col-8 img{
    height: 100%;
-   min-height: 650px;
+   min-height: 690px;
    object-fit: cover;
    width: -webkit-fill-available;
    transition: height 0.3s;
@@ -448,7 +461,7 @@ li{
 
 #text{
    max-width: 700px;
-   min-width: 500px;
+   min-width: 280px;
 }
 
 #text h1{
@@ -506,7 +519,6 @@ li{
    justify-content: flex-start;
    align-items: center;
    align-content: space-around;
-   max-height: 300px;
 }
 
 #infoIcon li{
@@ -534,9 +546,8 @@ li{
    border-left: rgb(200, 200, 200) solid 1px;
    border-right: rgb(200, 200, 200) solid 1px;
    padding: 30px;
-   width: 500px;
-   min-width: 500px;
-   height: 100hv;
+   max-width: 500px;
+   min-width: 350px;
    margin: 0 100px 20px 50px;
 }
 
@@ -690,4 +701,137 @@ select{
 
 #bookingCompleted a:hover{
    background-color: #333;
+}
+
+@media (min-width: 0px) and (max-width: 600px) {
+
+   body{
+      width: 100%;
+   }
+
+   #text{
+      padding: 30px;
+   }
+
+   #logo{
+      margin: 10%;
+   }
+
+   #logo img{
+      width: 100px;
+   }
+
+   #logo h1{
+     font-size: 20px;
+     line-height: 31px;
+     padding: 10px 0px 0px 13px;
+   }
+
+   #info #logo img{
+      width: 100px;
+   }
+
+   #smallLogo {
+      margin-left: 20px;
+  }
+
+   #rooms {
+      max-width: 984px;
+      height: 70%;
+      margin: -50px auto;
+   }
+
+   #info {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100vw;
+      height: 250px;
+      position: absolute;
+      overflow-y: unset;
+   }
+
+   #infoIcon {
+      justify-content: center;
+  }
+
+   #socialMedia {
+      width: 100px;
+      height: 90px;
+      line-height: 90px;
+      position: absolute;
+      margin: -50px 0;
+      float:unset;
+      text-align: center;
+      border: none;
+  }
+
+   #contact {
+      position: absolute;
+      width: 100%;
+      height: 90px;
+      margin-top: 300px;
+      z-index: 4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+
+   #address {
+      position: absolute;
+      margin: 30px;
+      line-height: 30px;
+      color: #fff;
+      font-family: 'Lato', sans-serif;
+      font-size: 12px;
+      letter-spacing: 2px;
+      min-width: 270px;
+   }
+   
+   #datePicker {
+      display: flex;
+      flex-direction: column;
+      border: none;
+      border-top: rgb(200, 200, 200) solid 1px;
+      padding: 30px;
+      max-width: 500px;
+      min-width: 280px;
+      margin: 0;
+   }
+   
+   #dateBox {
+      display: flex;
+      justify-content: space-around;
+      align-items: baseline;
+      width: fit-content;
+      flex-direction: column;
+      height: 40px;
+      flex-wrap: nowrap;
+      padding: 60px 0;
+  }
+
+  #errorDate {
+   margin-top: -30px;
+  }
+
+
+   h4{
+      font-family: 'Lato', sans-serif;
+      float: left;
+      letter-spacing: 2px;
+   }
+   
+   h5{
+      font-family: 'Lato', sans-serif;
+      float: left;
+      font-size: 24px;
+      letter-spacing: 2px;
+   }
+   
+   p{
+      font-family: 'Lato', sans-serif;
+      float: left;
+      font-size: 14px;
+      letter-spacing: 2px;
+   }
 }
