--- a/CSS/style.css
+++ b/CSS/style.css
@@ -752,7 +752,17 @@ select{
    }
 
    #infoIcon {
+      display: flex;
+      float: left;
+      max-width: 500px;
+      min-width: 400px;
+      border-top: rgb(200, 200, 200) solid 1px;
+      flex-wrap: wrap;
+      margin: 0;
+      flex-direction: row;
       justify-content: center;
+      align-items: center;
+      align-content: space-around;
   }
 
    #socialMedia {
@@ -833,5 +843,34 @@ select{
       float: left;
       font-size: 14px;
       letter-spacing: 2px;
+   }
+
+   #top{
+      height: 500px;
+      box-shadow: inset 0 -50px 200px -50px rgb(0 0 0);
+   }
+
+   #roomPicture {
+      width: 100vw;
+    height: 50%;
+    overflow: hidden;
+    display: flex;
+    position: relative;
+    margin: 0;
+    flex-direction: column;
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 10%);
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-evenly;
+    align-content: space-between;
+  }
+
+   #roomPicture .col-8 img{
+      height: 100%;
+      min-height: 690px;
+      object-fit: cover;
+      min-width: 300px;
+      width: -webkit-fill-available;
+      transition: height 0.3s;
    }
 }
