--- a/CSS/style.css
+++ b/CSS/style.css
@@ -456,7 +456,8 @@ li{
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
-   margin: 0 100px 0 100px;
+   margin: 20px;
+   min-width: 300px;
 }
 
 #text{
@@ -511,7 +512,7 @@ li{
    display: flex;
    float: left;
    max-width: 480px;
-   min-width: 300px;
+   min-width: 328px;
    border-top: rgb(200, 200, 200) solid 1px;
    flex-wrap: wrap;
    margin: 30px 0;
@@ -548,7 +549,8 @@ li{
    padding: 30px;
    max-width: 500px;
    min-width: 350px;
-   margin: 0 100px 20px 50px;
+   margin: 0px;
+   margin-bottom: 20px;
 }
 
 #datePicker label{
